@@ -22,7 +22,6 @@ import com.thoughtworks.go.server.domain.support.toggle.FeatureToggle;
 import com.thoughtworks.go.server.domain.support.toggle.FeatureToggles;
 import com.thoughtworks.go.util.SystemEnvironment;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -87,7 +86,7 @@ public class FeatureToggleRepository {
 
     private FeatureToggles readTogglesFromStream(InputStream streamForToggles, String kindOfToggle) {
         try {
-            String existingToggleJSONContent = IOUtils.toString(streamForToggles);
+            String existingToggleJSONContent = new String(streamForToggles.readAllBytes(), UTF_8);
 
             FeatureToggleFileContentRepresentation toggleContent = gson.fromJson(existingToggleJSONContent, FeatureToggleFileContentRepresentation.class);
             return new FeatureToggles(toggleContent.toggles);
